PR/45456: Tetsuya Isaki: Don't mix stdio and write.